...
              fontSize: OnboardingConstants.loginLinkFontSize,
              color: Colors.grey,
            ),
            children: [
              const TextSpan(text: "Already have an account? "),
              TextSpan(
                text: "Login",
                style: TextStyle(
                  color: AppColors.primary,
                  fontWeight: FontWeight.w600,
                ),
              ),
            ],
...
